Added REST gateway to gRPC
