# pkg/api/v1/todo-service.pb.go
@@ -8,6 +8,8 @@ import (
 	fmt "fmt"
 	proto "github.com/golang/protobuf/proto"
 	timestamp "github.com/golang/protobuf/ptypes/timestamp"
+	_ "github.com/grpc-ecosystem/grpc-gateway/protoc-gen-swagger/options"
+	_ "google.golang.org/genproto/googleapis/api/annotations"
 	grpc "google.golang.org/grpc"
 	math "math"
 )
@@ -23,7 +25,7 @@ var _ = math.Inf
 // proto package needs to be updated.
 const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
 
-// Tasks we have to do
+// Task we have to do
 type ToDo struct {
 	// Unique integer identifier of the todo task
 	Id int64 `protobuf:"varint,1,opt,name=id,proto3" json:"id,omitempty"`
@@ -601,34 +603,51 @@ func init() {
 func init() { proto.RegisterFile("todo-service.proto", fileDescriptor_80b701c7b1c502fe) }
 
 var fileDescriptor_80b701c7b1c502fe = []byte{
-	// 420 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x53, 0xcd, 0x8e, 0xd3, 0x30,
-	0x10, 0x56, 0x7e, 0x36, 0xbb, 0x3b, 0xa1, 0xd9, 0xc5, 0x70, 0x88, 0x22, 0x04, 0x91, 0x4f, 0xe5,
-	0x40, 0xa2, 0x06, 0x89, 0xd3, 0x8a, 0x15, 0xda, 0x3e, 0x41, 0x28, 0x0f, 0x90, 0xd6, 0x43, 0x65,
-	0x29, 0xad, 0x43, 0xe2, 0xf6, 0x11, 0x78, 0x6d, 0x90, 0xed, 0xb8, 0x6d, 0x22, 0xd2, 0x0b, 0xb7,
-	0xcc, 0x97, 0x6f, 0xe6, 0xfb, 0xe6, 0xc7, 0x40, 0xa4, 0x60, 0xe2, 0x53, 0x87, 0xed, 0x91, 0x6f,
-	0x30, 0x6b, 0x5a, 0x21, 0x05, 0x71, 0x8f, 0x8b, 0xe4, 0xc3, 0x56, 0x88, 0x6d, 0x8d, 0xb9, 0x46,
-	0xd6, 0x87, 0x9f, 0xb9, 0xe4, 0x3b, 0xec, 0x64, 0xb5, 0x6b, 0x0c, 0x89, 0xfe, 0x76, 0xc0, 0x5f,
-	0x89, 0xa5, 0x20, 0x11, 0xb8, 0x9c, 0xc5, 0x4e, 0xea, 0xcc, 0xbd, 0xd2, 0xe5, 0x8c, 0xbc, 0x85,
-	0x1b, 0xc9, 0x65, 0x8d, 0xb1, 0x9b, 0x3a, 0xf3, 0xfb, 0xd2, 0x04, 0x24, 0x85, 0x90, 0x61, 0xb7,
-	0x69, 0x79, 0x23, 0xb9, 0xd8, 0xc7, 0x9e, 0xfe, 0x77, 0x09, 0x91, 0x2f, 0x70, 0xd7, 0xe2, 0x8e,
-	0xef, 0x19, 0xb6, 0xb1, 0x9f, 0x3a, 0xf3, 0xb0, 0x48, 0x32, 0x63, 0x22, 0xb3, 0x26, 0xb2, 0x95,
-	0x35, 0x51, 0x9e, 0xb8, 0xf4, 0x19, 0x66, 0x2f, 0x2d, 0x56, 0x12, 0x4b, 0xfc, 0x75, 0xc0, 0x4e,
-	0x92, 0x47, 0xf0, 0xaa, 0x86, 0x6b, 0x47, 0xf7, 0xa5, 0xfa, 0x24, 0xef, 0xc0, 0x97, 0x62, 0x29,
-	0xb4, 0xa3, 0xb0, 0xb8, 0xcb, 0x8e, 0x8b, 0x4c, 0x59, 0x2f, 0x35, 0x4a, 0x0b, 0x88, 0x6c, 0x81,
-	0xae, 0x11, 0xfb, 0x0e, 0xff, 0x51, 0xc1, 0x34, 0xe9, 0xda, 0x26, 0x69, 0x0e, 0x61, 0x89, 0x15,
-	0x9b, 0x96, 0x1c, 0x27, 0x7c, 0x85, 0x57, 0x26, 0x61, 0x52, 0xe2, 0xba, 0xc9, 0x67, 0x98, 0xfd,
-	0x68, 0xd8, 0x7f, 0x74, 0xf9, 0x04, 0x91, 0x2d, 0x30, 0x69, 0x21, 0x86, 0xdb, 0x83, 0xe6, 0x58,
-	0xe7, 0x36, 0xa4, 0x0b, 0x98, 0x2d, 0xb1, 0xc6, 0x6b, 0xf2, 0xe3, 0x8e, 0x9f, 0x20, 0xb2, 0x29,
-	0xd7, 0x04, 0x99, 0xe6, 0x9c, 0x04, 0xfb, 0x90, 0x52, 0x88, 0xd4, 0xbc, 0xbe, 0xd5, 0xf5, 0xa4,
-	0x22, 0x7d, 0x81, 0x87, 0x13, 0x67, 0x52, 0xe2, 0x3d, 0xdc, 0xa8, 0xfe, 0xbb, 0xd8, 0x4d, 0xbd,
-	0xc1, 0x58, 0x0c, 0x5c, 0xfc, 0x71, 0x20, 0x54, 0xf1, 0x77, 0xf3, 0x04, 0x48, 0x0e, 0x81, 0xb9,
-	0x06, 0xf2, 0x5a, 0x51, 0x07, 0xa7, 0x95, 0x90, 0x4b, 0xa8, 0x97, 0xfc, 0x08, 0xbe, 0x72, 0x41,
-	0x1e, 0xd4, 0xbf, 0x8b, 0xa3, 0x48, 0x1e, 0xcf, 0x40, 0x4f, 0xcd, 0x21, 0x30, 0x3b, 0x30, 0xb5,
-	0x07, 0x0b, 0x35, 0xb5, 0x47, 0x2b, 0xca, 0x21, 0x30, 0x33, 0x34, 0x09, 0x83, 0x15, 0x98, 0x84,
-	0xd1, 0x88, 0x0b, 0xb8, 0xed, 0x47, 0x42, 0x88, 0x95, 0x3f, 0xcf, 0x30, 0x79, 0x33, 0xc0, 0x4c,
-	0xce, 0x3a, 0xd0, 0xcf, 0xeb, 0xf3, 0xdf, 0x00, 0x00, 0x00, 0xff, 0xff, 0xda, 0x15, 0x17, 0x41,
-	0x0b, 0x04, 0x00, 0x00,
+	// 692 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0xa4, 0x54, 0xcf, 0x6f, 0xd3, 0x30,
+	0x18, 0x55, 0xd2, 0xae, 0xdb, 0xbe, 0xae, 0xdd, 0xf0, 0x86, 0xa8, 0xaa, 0x09, 0xa2, 0x9c, 0xa6,
+	0x8a, 0x24, 0x6b, 0x98, 0x76, 0x28, 0x13, 0xfb, 0x55, 0x21, 0xce, 0x61, 0x5c, 0xb8, 0x65, 0x89,
+	0x49, 0x3d, 0x92, 0x38, 0xd8, 0x4e, 0x87, 0x84, 0x76, 0xe1, 0x30, 0x09, 0x4e, 0x08, 0x6e, 0x5c,
+	0xf8, 0xa3, 0xf8, 0x17, 0xf8, 0x43, 0x50, 0xec, 0xa4, 0x5b, 0xb6, 0x75, 0x42, 0xe2, 0xd4, 0xfa,
+	0xf9, 0x7d, 0xef, 0xbd, 0xcf, 0xfe, 0x62, 0x40, 0x82, 0x86, 0xd4, 0xe2, 0x98, 0x4d, 0x49, 0x80,
+	0xed, 0x8c, 0x51, 0x41, 0x91, 0x3e, 0x1d, 0xf6, 0x9f, 0x44, 0x94, 0x46, 0x31, 0x76, 0x24, 0x72,
+	0x9a, 0xbf, 0x73, 0x04, 0x49, 0x30, 0x17, 0x7e, 0x92, 0x29, 0x52, 0x7f, 0xb3, 0x24, 0xf8, 0x19,
+	0x71, 0xfc, 0x34, 0xa5, 0xc2, 0x17, 0x84, 0xa6, 0xbc, 0xdc, 0x7d, 0x2a, 0x7f, 0x02, 0x2b, 0xc2,
+	0xa9, 0xc5, 0xcf, 0xfd, 0x28, 0xc2, 0xcc, 0xa1, 0x99, 0x64, 0xdc, 0x66, 0x9b, 0x97, 0x1a, 0x34,
+	0x4f, 0xe8, 0x98, 0xa2, 0x2e, 0xe8, 0x24, 0xec, 0x69, 0x86, 0xb6, 0xd5, 0xf0, 0x74, 0x12, 0xa2,
+	0x0d, 0x58, 0x10, 0x44, 0xc4, 0xb8, 0xa7, 0x1b, 0xda, 0xd6, 0xb2, 0xa7, 0x16, 0xc8, 0x80, 0x76,
+	0x88, 0x79, 0xc0, 0x88, 0x14, 0xec, 0x35, 0xe4, 0xde, 0x75, 0x08, 0xed, 0xc2, 0x12, 0xc3, 0x09,
+	0x49, 0x43, 0xcc, 0x7a, 0x4d, 0x43, 0xdb, 0x6a, 0xbb, 0x7d, 0x5b, 0xe5, 0xb5, 0xab, 0x86, 0xec,
+	0x93, 0xaa, 0x21, 0x6f, 0xc6, 0x35, 0xf7, 0xa1, 0x73, 0xcc, 0xb0, 0x2f, 0xb0, 0x87, 0x3f, 0xe4,
+	0x98, 0x0b, 0xb4, 0x06, 0x0d, 0x3f, 0x23, 0x32, 0xd1, 0xb2, 0x57, 0xfc, 0x45, 0x9b, 0xd0, 0x14,
+	0x74, 0x4c, 0x65, 0xa2, 0xb6, 0xbb, 0x64, 0x4f, 0x87, 0x76, 0x11, 0xdd, 0x93, 0xa8, 0xe9, 0x42,
+	0xb7, 0x12, 0xe0, 0x19, 0x4d, 0x39, 0xbe, 0x43, 0x41, 0x35, 0xa9, 0x57, 0x4d, 0x9a, 0x0e, 0xb4,
+	0x3d, 0xec, 0x87, 0xf3, 0x2d, 0x6f, 0x16, 0xbc, 0x80, 0x15, 0x55, 0x30, 0xd7, 0xe2, 0xfe, 0x90,
+	0xfb, 0xd0, 0x79, 0x93, 0x85, 0xff, 0xd1, 0xe5, 0x1e, 0x74, 0x2b, 0x81, 0xb9, 0x11, 0x7a, 0xb0,
+	0x98, 0x4b, 0x4e, 0x95, 0xbc, 0x5a, 0x9a, 0x43, 0xe8, 0x8c, 0x71, 0x8c, 0xef, 0xb3, 0xbf, 0xd9,
+	0xf1, 0x1e, 0x74, 0xab, 0x92, 0xfb, 0x0c, 0x43, 0xc9, 0x99, 0x19, 0x96, 0x4b, 0xd3, 0x84, 0x6e,
+	0x71, 0x5e, 0x87, 0x71, 0x3c, 0xd7, 0xd1, 0x3c, 0x86, 0xd5, 0x19, 0x67, 0xae, 0xc5, 0x63, 0x58,
+	0x28, 0xfa, 0xe7, 0x3d, 0xdd, 0x68, 0xd4, 0x8e, 0x45, 0xc1, 0xee, 0xb7, 0x06, 0xb4, 0x8b, 0xf5,
+	0x6b, 0xf5, 0x39, 0xa1, 0x57, 0xb0, 0x58, 0x8a, 0x22, 0x54, 0x70, 0xeb, 0x29, 0xfa, 0xeb, 0x35,
+	0x4c, 0xb9, 0x9a, 0x1b, 0x9f, 0x7f, 0xff, 0xf9, 0xa1, 0x77, 0xd1, 0x8a, 0x33, 0x1d, 0x3a, 0xc5,
+	0xc7, 0xe9, 0xf8, 0x71, 0x8c, 0xc6, 0xd0, 0x52, 0x73, 0x85, 0x1e, 0x14, 0x45, 0xb5, 0x21, 0xed,
+	0xa3, 0xeb, 0x50, 0x29, 0xb3, 0x2e, 0x65, 0x3a, 0xe6, 0x52, 0x25, 0x33, 0xd2, 0x06, 0xe8, 0x00,
+	0x9a, 0x85, 0x1d, 0x5a, 0xad, 0x8c, 0x2b, 0x85, 0xb5, 0x2b, 0xa0, 0xac, 0x7f, 0x28, 0xeb, 0x57,
+	0x51, 0x67, 0x16, 0xe3, 0x13, 0x09, 0x2f, 0x50, 0x04, 0x2d, 0x75, 0xf3, 0x2a, 0x47, 0x6d, 0x8c,
+	0x54, 0x8e, 0xfa, 0x60, 0x98, 0xbb, 0x52, 0x67, 0xbb, 0x8f, 0xae, 0x74, 0x8a, 0xb3, 0xb2, 0x49,
+	0x78, 0x31, 0xd2, 0x06, 0x6f, 0x1f, 0xb9, 0x77, 0x6f, 0xa0, 0x97, 0xd0, 0x52, 0x37, 0xae, 0x8c,
+	0x6a, 0x03, 0xa3, 0x8c, 0xea, 0x03, 0x51, 0x05, 0x1e, 0xd4, 0x03, 0x1f, 0x7d, 0xd5, 0xbf, 0x1f,
+	0x5e, 0xea, 0xe8, 0x97, 0x06, 0x2b, 0xc5, 0xcd, 0x18, 0xe5, 0x4b, 0x67, 0x7e, 0xd1, 0xc0, 0x89,
+	0xa8, 0x15, 0xb1, 0x2c, 0xb0, 0x26, 0x42, 0x64, 0x16, 0xc3, 0x5c, 0x58, 0x09, 0x09, 0x18, 0x2d,
+	0x29, 0x96, 0xc8, 0x05, 0x65, 0xc4, 0x8f, 0x8d, 0x8c, 0xd1, 0x33, 0x1c, 0x08, 0x74, 0x54, 0x10,
+	0xf9, 0xc8, 0x71, 0x22, 0x22, 0x26, 0xf9, 0xa9, 0x1d, 0xd0, 0xc4, 0xf1, 0x13, 0x4e, 0xdf, 0xd3,
+	0xf8, 0x5f, 0xb5, 0xfa, 0x28, 0xc1, 0x21, 0xc9, 0x93, 0x83, 0xb2, 0xae, 0xd0, 0x70, 0x1b, 0x43,
+	0x7b, 0x7b, 0xa0, 0x69, 0xee, 0x9a, 0x9f, 0x65, 0x31, 0x09, 0xe4, 0xd3, 0xe8, 0x9c, 0x71, 0x9a,
+	0x8e, 0x6e, 0x21, 0xde, 0x73, 0x68, 0xec, 0x6c, 0xef, 0xa0, 0x1d, 0x18, 0x78, 0x58, 0xe4, 0x2c,
+	0xc5, 0xa1, 0x71, 0x3e, 0xc1, 0xa9, 0x21, 0x26, 0xd8, 0x60, 0x98, 0xd3, 0x9c, 0x05, 0xd8, 0x08,
+	0x29, 0xe6, 0x46, 0x4a, 0x85, 0x81, 0x3f, 0x12, 0x2e, 0x6c, 0xd4, 0x82, 0xe6, 0x4f, 0x5d, 0x5b,
+	0x3c, 0x6d, 0xc9, 0xc7, 0xef, 0xd9, 0xdf, 0x00, 0x00, 0x00, 0xff, 0xff, 0xc0, 0xb0, 0x8c, 0x6b,
+	0xf5, 0x05, 0x00, 0x00,
 }
 
 // Reference imports to suppress errors if they are not otherwise used.
@@ -643,6 +662,8 @@ const _ = grpc.SupportPackageIsVersion4
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://godoc.org/google.golang.org/grpc#ClientConn.NewStream.
 type ToDoServiceClient interface {
+	// Read all todo tasks
+	ReadAll(ctx context.Context, in *ReadAllRequest, opts ...grpc.CallOption) (*ReadAllResponse, error)
 	// Create new todo task
 	Create(ctx context.Context, in *CreateRequest, opts ...grpc.CallOption) (*CreateResponse, error)
 	// Read todo task
@@ -651,8 +672,6 @@ type ToDoServiceClient interface {
 	Update(ctx context.Context, in *UpdateRequest, opts ...grpc.CallOption) (*UpdateResponse, error)
 	// Delete todo task
 	Delete(ctx context.Context, in *DeleteRequest, opts ...grpc.CallOption) (*DeleteResponse, error)
-	// Read all todo tasks
-	ReadAll(ctx context.Context, in *ReadAllRequest, opts ...grpc.CallOption) (*ReadAllResponse, error)
 }
 
 type toDoServiceClient struct {
@@ -661,6 +680,15 @@ type toDoServiceClient struct {
 
 func NewToDoServiceClient(cc *grpc.ClientConn) ToDoServiceClient {
 	return &toDoServiceClient{cc}
+}
+
+func (c *toDoServiceClient) ReadAll(ctx context.Context, in *ReadAllRequest, opts ...grpc.CallOption) (*ReadAllResponse, error) {
+	out := new(ReadAllResponse)
+	err := c.cc.Invoke(ctx, "/v1.ToDoService/ReadAll", in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
 }
 
 func (c *toDoServiceClient) Create(ctx context.Context, in *CreateRequest, opts ...grpc.CallOption) (*CreateResponse, error) {
@@ -699,17 +727,10 @@ func (c *toDoServiceClient) Delete(ctx context.Context, in *DeleteRequest, opts 
 	return out, nil
 }
 
-func (c *toDoServiceClient) ReadAll(ctx context.Context, in *ReadAllRequest, opts ...grpc.CallOption) (*ReadAllResponse, error) {
-	out := new(ReadAllResponse)
-	err := c.cc.Invoke(ctx, "/v1.ToDoService/ReadAll", in, out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return out, nil
-}
-
 // ToDoServiceServer is the server API for ToDoService service.
 type ToDoServiceServer interface {
+	// Read all todo tasks
+	ReadAll(context.Context, *ReadAllRequest) (*ReadAllResponse, error)
 	// Create new todo task
 	Create(context.Context, *CreateRequest) (*CreateResponse, error)
 	// Read todo task
@@ -718,12 +739,28 @@ type ToDoServiceServer interface {
 	Update(context.Context, *UpdateRequest) (*UpdateResponse, error)
 	// Delete todo task
 	Delete(context.Context, *DeleteRequest) (*DeleteResponse, error)
-	// Read all todo tasks
-	ReadAll(context.Context, *ReadAllRequest) (*ReadAllResponse, error)
 }
 
 func RegisterToDoServiceServer(s *grpc.Server, srv ToDoServiceServer) {
 	s.RegisterService(&_ToDoService_serviceDesc, srv)
+}
+
+func _ToDoService_ReadAll_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(ReadAllRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(ToDoServiceServer).ReadAll(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: "/v1.ToDoService/ReadAll",
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(ToDoServiceServer).ReadAll(ctx, req.(*ReadAllRequest))
+	}
+	return interceptor(ctx, in, info, handler)
 }
 
 func _ToDoService_Create_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
@@ -798,28 +835,14 @@ func _ToDoService_Delete_Handler(srv interface{}, ctx context.Context, dec func(
 	return interceptor(ctx, in, info, handler)
 }
 
-func _ToDoService_ReadAll_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
-	in := new(ReadAllRequest)
-	if err := dec(in); err != nil {
-		return nil, err
-	}
-	if interceptor == nil {
-		return srv.(ToDoServiceServer).ReadAll(ctx, in)
-	}
-	info := &grpc.UnaryServerInfo{
-		Server:     srv,
-		FullMethod: "/v1.ToDoService/ReadAll",
-	}
-	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
-		return srv.(ToDoServiceServer).ReadAll(ctx, req.(*ReadAllRequest))
-	}
-	return interceptor(ctx, in, info, handler)
-}
-
 var _ToDoService_serviceDesc = grpc.ServiceDesc{
 	ServiceName: "v1.ToDoService",
 	HandlerType: (*ToDoServiceServer)(nil),
 	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "ReadAll",
+			Handler:    _ToDoService_ReadAll_Handler,
+		},
 		{
 			MethodName: "Create",
 			Handler:    _ToDoService_Create_Handler,
@@ -835,10 +858,6 @@ var _ToDoService_serviceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Delete",
 			Handler:    _ToDoService_Delete_Handler,
-		},
-		{
-			MethodName: "ReadAll",
-			Handler:    _ToDoService_ReadAll_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
